--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "node-fetch": "^3.0.0",
     "react": "^16.13.1",
@@ -37,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "preval.macro": "^5.0.0"
   }
 }
